Refactoring and storage in DB